--- a/tier.html
+++ b/tier.html
@@ -4,92 +4,91 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FFA Maç Kuralları</title>
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <style>
-        /* Genel Ayarlar */
+        /* Genel Stil */
         body {
-            font-family: 'Press Start 2P', cursive;
-            background-color: #ff33cc; /* Site Arka Planı - Pembe */
-            color: #ffffff;
+            font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            overflow-x: hidden;
+            background-color: #ff66cc; /* Site Arka Planı - Pembe */
+            color: #fff;
             box-sizing: border-box;
         }
 
         /* Başlık */
         header {
             text-align: center;
-            padding: 50px;
-            background: #222;
-            color: #00ff00; /* Neon Yeşil */
-            font-size: 3.5em;
-            letter-spacing: 2px;
+            padding: 50px 20px;
+            background-color: #222;
+            color: #00ff00;
+            font-size: 3em;
             text-transform: uppercase;
-            text-shadow: 0 0 10px #00ff00, 0 0 30px #00ff00, 0 0 40px #00ff00;
+            letter-spacing: 5px;
+            text-shadow: 0 0 15px rgba(0, 255, 0, 0.6);
+            margin-bottom: 40px;
         }
 
-        /* Kural Listesi Container */
+        /* Kural Container */
         .container {
-            padding: 40px 20px;
-            max-width: 900px; /* Daha geniş yapı */
-            margin: 40px auto;
-            background: #ffffff;
-            border-radius: 15px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
+            max-width: 1000px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #ffffff;
+            border-radius: 10px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
         }
 
-        /* Rule (Kural) Listesi */
+        /* Kural Listesi */
         .rules {
-            list-style: none;
+            list-style-type: none;
             padding: 0;
             margin: 0;
         }
 
         .rules li {
-            background-color: #ff66b2; /* Kural Arka Planı - Pembe */
-            margin: 15px 0;
-            padding: 25px;
-            border-radius: 10px;
+            background-color: #ff3399; /* Kural Arka Planı - Pembe */
+            margin: 20px 0;
+            padding: 30px;
+            border-radius: 12px;
+            border-left: 10px solid #00ff00;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
             position: relative;
-            border-left: 8px solid #00ff00;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.6);
-            font-size: 1.2em; /* Yazı boyutunu küçültüldü */
-            line-height: 1.6;
-            transition: all 0.3s ease;
+            transition: all 0.3s ease-in-out;
         }
 
         .rules li:hover {
-            background-color: #ff80cc;
+            background-color: #ff4da6;
             transform: translateY(-5px);
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.8);
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5);
         }
 
         .rule-number {
             position: absolute;
             top: -20px;
             left: -20px;
-            background: #ff66b2;
+            background: #ff3399;
             color: #fff;
-            padding: 10px 15px;
+            padding: 15px 20px;
             border-radius: 50%;
-            font-size: 2.5em;
+            font-size: 2em;
             font-weight: bold;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+            box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
         }
 
         .rule-title {
-            font-size: 1.4em;
+            font-size: 1.6em;
             color: #00ff00;
-            font-weight: bold;
+            font-weight: 500;
             text-transform: uppercase;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
         }
 
         .rule-description {
-            color: #ddd;
-            font-size: 1.2em;
-            line-height: 1.6;
+            color: #fff;
+            font-size: 1.1em;
+            line-height: 1.8;
+            text-align: justify;
         }
 
         .highlight {
@@ -101,10 +100,10 @@
         /* Neon Efekti */
         @keyframes neonGlow {
             0% {
-                text-shadow: 0 0 5px #ffcc00, 0 0 10px #ffcc00, 0 0 20px #ffcc00, 0 0 40px #ff66b2;
+                text-shadow: 0 0 10px #ffcc00, 0 0 20px #ffcc00, 0 0 30px #ffcc00, 0 0 40px #ff3399;
             }
             100% {
-                text-shadow: 0 0 10px #ffcc00, 0 0 20px #ffcc00, 0 0 30px #ffcc00, 0 0 50px #ff66b2;
+                text-shadow: 0 0 20px #ffcc00, 0 0 40px #ffcc00, 0 0 60px #ffcc00, 0 0 80px #ff3399;
             }
         }
 
@@ -115,10 +114,10 @@
         /* Footer */
         footer {
             background-color: #222;
-            color: #777;
-            padding: 20px;
+            color: #999;
+            padding: 15px 0;
             text-align: center;
-            font-size: 1.2em;
+            font-size: 1.1em;
         }
 
         footer a {
@@ -126,15 +125,25 @@
             text-decoration: none;
         }
 
+        footer a:hover {
+            text-decoration: underline;
+        }
+
         /* Mobil uyumluluk */
-        @media screen and (max-width: 768px) {
+        @media (max-width: 768px) {
             header {
-                font-size: 3em;
+                font-size: 2.5em;
+                padding: 30px 20px;
             }
 
             .rules li {
-                font-size: 1.1em;
                 padding: 20px;
+                font-size: 1em;
+            }
+
+            .rule-number {
+                font-size: 1.8em;
+                padding: 12px 16px;
             }
 
             footer {
