--- a/tier.html
+++ b/tier.html
@@ -4,150 +4,144 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FFA Maç Kuralları</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap" rel="stylesheet">
     <style>
         /* Genel Stil */
         body {
-            font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #ff66cc; /* Site Arka Planı - Pembe */
-            color: #fff;
-            box-sizing: border-box;
+            background: linear-gradient(to bottom right, #2c3e50, #34495e); /* Farklı renk geçişi */
+            font-family: 'Inter', sans-serif;
+            color: #ecf0f1;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        /* İçerik Konteyneri */
+        .container {
+            max-width: 1200px;
+            width: 100%;
+            background-color: #1e252b;
+            padding: 40px;
+            border-radius: 15px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+            overflow: hidden;
+            animation: fadeIn 1.5s ease-in-out;
         }
 
         /* Başlık */
         header {
             text-align: center;
-            padding: 50px 20px;
-            background-color: #222;
-            color: #00ff00;
-            font-size: 3em;
-            text-transform: uppercase;
-            letter-spacing: 5px;
-            text-shadow: 0 0 15px rgba(0, 255, 0, 0.6);
             margin-bottom: 40px;
         }
 
-        /* Kural Container */
-        .container {
-            max-width: 1000px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #ffffff;
-            border-radius: 10px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+        header h1 {
+            font-size: 3.5em;
+            color: #f39c12;
+            text-transform: uppercase;
+            letter-spacing: 3px;
+            font-weight: 700;
+            text-shadow: 0 0 20px rgba(243, 156, 18, 0.6), 0 0 30px rgba(243, 156, 18, 0.3);
+            animation: textGlow 1.5s ease-in-out infinite alternate;
         }
 
         /* Kural Listesi */
         .rules {
             list-style-type: none;
             padding: 0;
-            margin: 0;
         }
 
         .rules li {
-            background-color: #ff3399; /* Kural Arka Planı - Pembe */
-            margin: 20px 0;
-            padding: 30px;
-            border-radius: 12px;
-            border-left: 10px solid #00ff00;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+            background-color: #34495e; /* Kural Arka Planı */
+            margin: 15px 0;
+            padding: 20px;
+            border-left: 6px solid #f39c12;
+            border-radius: 8px;
+            transition: all 0.3s ease;
             position: relative;
-            transition: all 0.3s ease-in-out;
         }
 
         .rules li:hover {
-            background-color: #ff4da6;
+            background-color: #16a085;
             transform: translateY(-5px);
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5);
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
         }
 
+        /* Kural Numarası */
         .rule-number {
             position: absolute;
-            top: -20px;
-            left: -20px;
-            background: #ff3399;
+            top: -10px;
+            left: -10px;
+            background: #f39c12;
             color: #fff;
-            padding: 15px 20px;
+            padding: 10px 15px;
+            font-size: 1.8em;
+            font-weight: 700;
             border-radius: 50%;
-            font-size: 2em;
-            font-weight: bold;
-            box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
         }
 
+        /* Kural Başlık */
         .rule-title {
             font-size: 1.6em;
-            color: #00ff00;
+            color: #ecf0f1;
             font-weight: 500;
+            margin-bottom: 10px;
             text-transform: uppercase;
-            margin-bottom: 15px;
+            letter-spacing: 1px;
         }
 
+        /* Kural Açıklaması */
         .rule-description {
-            color: #fff;
             font-size: 1.1em;
-            line-height: 1.8;
+            color: #bdc3c7;
+            line-height: 1.6;
             text-align: justify;
         }
 
+        /* Öne Çıkan Kısımlar */
         .highlight {
-            color: #ffcc00;
-            font-weight: bold;
+            color: #f39c12;
+            font-weight: 600;
             text-decoration: underline;
         }
 
-        /* Neon Efekti */
-        @keyframes neonGlow {
+        /* Neon Efekti ve Animasyon */
+        @keyframes textGlow {
             0% {
-                text-shadow: 0 0 10px #ffcc00, 0 0 20px #ffcc00, 0 0 30px #ffcc00, 0 0 40px #ff3399;
+                text-shadow: 0 0 10px rgba(243, 156, 18, 0.6), 0 0 30px rgba(243, 156, 18, 0.3);
             }
             100% {
-                text-shadow: 0 0 20px #ffcc00, 0 0 40px #ffcc00, 0 0 60px #ffcc00, 0 0 80px #ff3399;
+                text-shadow: 0 0 20px rgba(243, 156, 18, 0.6), 0 0 40px rgba(243, 156, 18, 0.6);
             }
         }
 
-        .rule-title {
-            animation: neonGlow 1.5s ease-in-out infinite alternate;
-        }
-
-        /* Footer */
-        footer {
-            background-color: #222;
-            color: #999;
-            padding: 15px 0;
-            text-align: center;
-            font-size: 1.1em;
-        }
-
-        footer a {
-            color: #ffcc00;
-            text-decoration: none;
-        }
-
-        footer a:hover {
-            text-decoration: underline;
+        @keyframes fadeIn {
+            0% {
+                opacity: 0;
+                transform: scale(0.8);
+            }
+            100% {
+                opacity: 1;
+                transform: scale(1);
+            }
         }
 
         /* Mobil uyumluluk */
         @media (max-width: 768px) {
-            header {
+            header h1 {
                 font-size: 2.5em;
-                padding: 30px 20px;
             }
 
             .rules li {
-                padding: 20px;
-                font-size: 1em;
+                padding: 15px;
             }
 
             .rule-number {
-                font-size: 1.8em;
-                padding: 12px 16px;
-            }
-
-            footer {
-                font-size: 1em;
+                font-size: 1.5em;
+                padding: 8px 12px;
             }
         }
 
@@ -155,11 +149,11 @@
 </head>
 <body>
 
-<header>
-    FFA Maç Kuralları
-</header>
-
 <div class="container">
+    <header>
+        <h1>FFA Maç Kuralları</h1>
+    </header>
+
     <ul class="rules">
         <li>
             <div class="rule-number">1</div>
@@ -192,10 +186,6 @@
         </li>
     </ul>
 </div>
-
-<footer>
-    © 2025 FFA - Tüm Hakları Saklıdır. | <a href="#">Gizlilik Politikası</a>
-</footer>
 
 </body>
 </html>
