--- a/tier.html
+++ b/tier.html
@@ -5,28 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FFA Maç Kuralları</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Rubik+Mono+One&display=swap');
+
         body {
             margin: 0;
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(to bottom, #1e293b, #0f172a);
+            font-family: 'Press Start 2P', cursive;
+            background: radial-gradient(circle, #3b0764, #1e0035);
             color: #e2e8f0;
             overflow-x: hidden;
         }
 
         h1 {
             text-align: center;
-            font-size: 3rem;
+            font-size: 3.5rem;
             margin-top: 20px;
-            color: #38bdf8;
-            animation: glow 2s infinite;
+            color: #ff79c6;
+            animation: neonGlow 3s infinite alternate;
         }
 
-        @keyframes glow {
-            0%, 100% {
-                text-shadow: 0 0 10px #38bdf8, 0 0 20px #38bdf8, 0 0 30px #38bdf8;
+        @keyframes neonGlow {
+            0% {
+                text-shadow: 0 0 5px #ff79c6, 0 0 10px #ff79c6, 0 0 20px #bd93f9, 0 0 30px #bd93f9;
             }
-            50% {
-                text-shadow: 0 0 20px #0ea5e9, 0 0 40px #0ea5e9, 0 0 50px #0ea5e9;
+            100% {
+                text-shadow: 0 0 10px #ff79c6, 0 0 20px #ff79c6, 0 0 40px #bd93f9, 0 0 50px #bd93f9;
             }
         }
 
@@ -34,42 +36,59 @@
             max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
+            background: rgba(0, 0, 0, 0.8);
+            border: 2px solid #ff79c6;
+            border-radius: 15px;
+            box-shadow: 0 0 15px #ff79c6;
         }
 
         .rule {
-            background: rgba(15, 23, 42, 0.8);
-            border: 1px solid #334155;
-            padding: 15px;
+            background: rgba(60, 0, 85, 0.9);
+            border: 2px solid #bd93f9;
+            padding: 20px;
             border-radius: 10px;
-            margin-bottom: 15px;
-            transition: transform 0.3s, background 0.3s;
+            margin-bottom: 20px;
+            transition: transform 0.3s, box-shadow 0.3s;
+            position: relative;
         }
 
         .rule:hover {
-            transform: scale(1.02);
-            background: rgba(51, 65, 85, 0.9);
+            transform: rotate(-1deg) scale(1.05);
+            box-shadow: 0 0 20px #ff79c6;
         }
 
         .rule h2 {
             margin: 0;
-            color: #38bdf8;
-            font-size: 1.5rem;
+            color: #ffb86c;
+            font-size: 1.8rem;
+            text-transform: uppercase;
         }
 
         .rule p {
             margin: 10px 0 0;
-            font-size: 1rem;
+            font-size: 1.2rem;
+            line-height: 1.6;
+        }
+
+        .rule-number {
+            position: absolute;
+            top: -15px;
+            left: -15px;
+            background: #ff5555;
+            color: #fff;
+            font-size: 1.2rem;
+            padding: 10px;
+            border-radius: 50%;
+            box-shadow: 0 0 10px #ff5555;
         }
 
         footer {
             text-align: center;
-            padding: 10px 0;
-            background: #0f172a;
-            color: #64748b;
-            font-size: 0.9rem;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
+            padding: 15px 0;
+            background: #1e0035;
+            color: #8be9fd;
+            font-size: 1rem;
+            border-top: 2px solid #bd93f9;
         }
     </style>
 </head>
@@ -78,29 +97,54 @@
 
     <div class="container">
         <div class="rule">
-            <h2>1. Emergency Rule</h2>
+            <div class="rule-number">1</div>
+            <h2>Emergency Rule</h2>
             <p>Eğer maçtan önce 1 saat içinde oyuncu alındıysa karşı takım 1-0 önde başlar. Eğer maç içinde emergency alınırsa karşı takıma +2 gol verilir.</p>
         </div>
         <div class="rule">
-            <h2>2. Loan Rule</h2>
+            <div class="rule-number">2</div>
+            <h2>Loan Rule</h2>
             <p>Sadece maçın kaderini değiştirmeyecek belli kişiler loan alınabilir ve her sezon takım başına ligde maksimum 2, kupada ise 1 loan alınabilir. Fazlası alınırsa karşı takıma auto verilir.</p>
         </div>
         <div class="rule">
-            <h2>3. 3. Parti Yazılım</h2>
-            <p>Clumsy, VPN, Script, FastFlag gibi yazılımlar yasaktır.</p>
+            <div class="rule-number">3</div>
+            <h2>3. Parti Yazılım</h2>
+            <p>Clumsy, VPN, Script, FastFlag gibi yazılımlar yasaktır. (Roblox’un Yasaklanması gibi olağan şeyler dışında)</p>
         </div>
         <div class="rule">
-            <h2>4. PB</h2>
-            <p>Defans oyuncusu kendi kalecisine yerden pas atarsa ve kaleci eline alırsa 1/2, 2 kere yapılırsa +1’dir.</p>
+            <div class="rule-number">4</div>
+            <h2>PB</h2>
+            <p>Defans oyuncusu kendi kalecisine yerden pas atarsa ve kaleci eline alırsa 1/2. Eğer 2 kere yapılırsa +1.</p>
         </div>
         <div class="rule">
-            <h2>5. CK Rush</h2>
+            <div class="rule-number">5</div>
+            <h2>CK Rush</h2>
             <p>Korner kullanan oyuncuya rush yapmak 1/2'dir. 2. kez yapılırsa yc, 3. kez yapılırsa 2. yc verilir.</p>
         </div>
-        <!-- Kuralları devam ettirin -->
-
         <div class="rule">
-            <h2>36. GK Combo</h2>
+            <div class="rule-number">6</div>
+            <h2>Last</h2>
+            <p>Eğer gole giden bir oyuncuya karşı takım kayarsa (önünde başka oyuncu olmama şartıyla) +1 gol ve yc verilir.</p>
+        </div>
+        <div class="rule">
+            <div class="rule-number">7</div>
+            <h2>Leave Ball</h2>
+            <p>Eğer rakip takımdan bir oyuncuya kayıp topu alırsanız geri bırakmak zorundasınız. Eğer dokunursanız veya 3 saniye dolmadan topu alırsanız yc verilir.</p>
+        </div>
+        <div class="rule">
+            <div class="rule-number">8</div>
+            <h2>Last CB</h2>
+            <p>Eğer ataktayken karşı takımın stoperine kayıp gol atarsanız gol iptali ve yc verilir.</p>
+        </div>
+        <div class="rule">
+            <div class="rule-number">9</div>
+            <h2>Visu, 3x, 4x, 5x</h2>
+            <p>Bunun gibi kombinasyonlar hem şutta hem de pasta yasaktır. 1/2'dir, 2. yapılışında yc verilir.</p>
+        </div>
+        <!-- Tüm kuralları buraya eklersiniz -->
+        <div class="rule">
+            <div class="rule-number">36</div>
+            <h2>GK Combo</h2>
             <p>GK'da her türlü kombinasyon yasaktır. (örneğin: x lmb). Cezası yc'dir.</p>
         </div>
     </div>
