--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             text-align: center;
             padding: 20px;
             flex-direction: column; /* Dikey yerleşim */
+            min-height: 100%; /* Sayfa altına kaymamayı sağlar */
         }
 
         h1 {
@@ -135,8 +136,8 @@
 
         /* Video Stili */
         .video-container {
-            width: 70%;
-            max-width: 700px; /* Küçültülmüş boyut */
+            width: 90%;
+            max-width: 600px; /* Küçültülmüş boyut */
             margin-top: 50px;
             position: relative;
             background-color: rgba(255, 255, 255, 0.1);
@@ -146,7 +147,7 @@
             display: flex;
             justify-content: center; /* Ortalamak için */
             align-items: center;
-            margin-left: 10%; /* Sağ tarafa kaydırmak için */
+            margin-top: 20px; /* Diğer içerikten uzaklaştırma */
         }
 
         video {
@@ -154,6 +155,49 @@
             height: auto;
             border-radius: 15px;
             box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
+        }
+
+        /* Mobil uyumlu tasarım */
+        @media (max-width: 768px) {
+            body {
+                padding: 10px;
+            }
+
+            .gallery {
+                grid-template-columns: repeat(2, 1fr);
+            }
+
+            .video-container {
+                width: 100%;
+                max-width: 100%;
+                margin-top: 30px;
+            }
+
+            h1 {
+                font-size: 2.5rem;
+            }
+
+            p {
+                font-size: 1.2rem;
+            }
+        }
+
+        @media (max-width: 480px) {
+            h1 {
+                font-size: 2rem;
+            }
+
+            p {
+                font-size: 1rem;
+            }
+
+            .gallery {
+                grid-template-columns: 1fr;
+            }
+
+            .video-container {
+                margin-top: 40px;
+            }
         }
     </style>
 </head>
