--- a/index.html
+++ b/index.html
@@ -3,132 +3,263 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Güvenlik Doğrulaması</title>
+    <title>mehmet12ws</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Dancing+Script&display=swap" rel="stylesheet">
     <style>
-        .security-check {
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Poppins', sans-serif;
+            background-color: #0a0a0a;
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            overflow: auto;
+            position: relative;
+            text-align: center;
+            padding: 20px;
+            flex-direction: column;
+        }
+
+        h1 {
+            font-family: 'Dancing Script', cursive;
+            font-size: 3.5rem;
+            color: #fff;
+            text-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
+            animation: fadeInText 2s ease-out;
+        }
+
+        @keyframes fadeInText {
+            0% { opacity: 0; transform: translateY(-50px); }
+            100% { opacity: 1; transform: translateY(0); }
+        }
+
+        p {
+            font-size: 1.5rem;
+            color: rgba(255, 255, 255, 0.8);
+            margin-top: 20px;
+            text-shadow: 0 0 10px rgba(255, 255, 255, 0.4);
+            animation: fadeInText 3s ease-out 1s forwards;
+        }
+
+        .gallery {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 20px;
+            margin-top: 40px;
+            width: 80%;
+            position: relative;
+        }
+
+        .image-container {
+            position: relative;
+            width: 200px; /* Küçültülmüş boyut */
+            height: 200px; /* Küçültülmüş boyut */
+            margin: 10px;
+            border-radius: 15px;
+            overflow: hidden;
+            box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            cursor: pointer;
+            background-color: rgba(255, 255, 255, 0.1);
+            border: 2px solid rgba(255, 255, 255, 0.3);
+            transform: rotate(5deg);
+        }
+
+        .image-container:hover {
+            transform: scale(1.05) rotate(0deg);
+            box-shadow: 0 0 40px rgba(255, 255, 255, 0.8);
+        }
+
+        .image-container img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transition: transform 0.3s ease;
+            border-radius: 15px;
+        }
+
+        .image-container:hover img {
+            transform: scale(1.1);
+        }
+
+        /* Tam ekran modunun stili */
+        .fullscreen {
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.95);
+            background-color: rgba(0, 0, 0, 0.9);
             display: flex;
             justify-content: center;
             align-items: center;
-            z-index: 9999;
-            flex-direction: column;
+            z-index: 1000;
+            display: none;
         }
 
-        .security-box {
-            background: #1a1a1a;
-            padding: 30px;
+        .fullscreen img {
+            max-width: 95%;
+            max-height: 95%;
+            object-fit: contain;
             border-radius: 15px;
-            box-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
-            text-align: center;
-            max-width: 400px;
-            width: 90%;
         }
 
-        .security-box h2 {
-            margin-bottom: 20px;
-            color: #fff;
+        .fullscreen.active {
+            display: flex;
         }
 
-        .loading {
-            width: 50px;
-            height: 50px;
-            border: 5px solid #f3f3f3;
-            border-top: 5px solid #3498db;
+        .close-btn {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            font-size: 40px;
+            color: white;
+            background: rgba(0, 0, 0, 0.6);
+            border: none;
             border-radius: 50%;
-            animation: spin 1s linear infinite;
-            margin: 20px auto;
+            cursor: pointer;
+            padding: 10px;
+            z-index: 2000;
         }
 
-        .hidden {
-            display: none !important;
+        .close-btn:hover {
+            background: rgba(255, 255, 255, 0.2);
         }
 
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
+        .video-container {
+            width: 80%;
+            max-width: 500px;
+            height: 500px; 
+            margin-top: 50px;
+            position: relative;
+            background-color: rgba(255, 255, 255, 0.1);
+            padding: 20px;
+            border-radius: 15px;
+            box-shadow: 0 0 30px rgba(255, 255, 255, 0.6);
+            display: flex;
+            justify-content: center; 
+            align-items: center;
+            margin-bottom: 20px;
+            margin-left: auto; 
+            margin-right: auto; 
+        }
+
+        video {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 15px;
+            box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
+        }
+
+        /* Mobil uyumlu tasarım */
+        @media (max-width: 768px) {
+            body {
+                padding: 10px;
+            }
+
+            .gallery {
+                grid-template-columns: repeat(2, 1fr);
+                width: 100%;
+            }
+
+            .video-container {
+                width: 100%;
+                max-width: 100%;
+                height: 300px;
+                margin-top: 20px;
+            }
+
+            h1 {
+                font-size: 2.5rem;
+            }
+
+            p {
+                font-size: 1.2rem;
+            }
+
+            /* Görsel uyumu için */
+            .image-container {
+                width: 150px;
+                height: 150px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            h1 {
+                font-size: 2rem;
+            }
+
+            p {
+                font-size: 1rem;
+            }
+
+            .gallery {
+                grid-template-columns: 1fr;
+                width: 100%;
+            }
+
+            .video-container {
+                margin-top: 40px;
+                height: 250px;
+            }
         }
     </style>
 </head>
 <body>
-    <!-- Güvenlik Doğrulaması Ekranı -->
-    <div id="security-check" class="security-check">
-        <div class="security-box">
-            <h2>Güvenlik Doğrulaması</h2>
-            <div id="loading" class="loading"></div>
-            <div id="security-error" class="hidden"></div>
+
+
+    
+        <div class="gallery">
+            <div class="image-container">
+                <img src="https://i.hizliresim.com/4zr3tdy.jpg" alt="Resim 1" onclick="openFullscreen(this)">
+            </div>
+            <div class="image-container">
+                <img src="https://i.hizliresim.com/qbfg756.jpg" alt="Resim 2" onclick="openFullscreen(this)">
+            </div>
+            <div class="image-container">
+                <img src="https://i.hizliresim.com/a2tcq5c.jpg" alt="Resim 3" onclick="openFullscreen(this)">
+            </div>
+            <div class="image-container">
+                <img src="https://i.hizliresim.com/hljwsvz.jpg" alt="Resim 4" onclick="openFullscreen(this)">
+            </div>
         </div>
+        
+        <!-- Video Ekleme Alanı -->
+        <div class="video-container">
+            <video controls>
+                <source src="https://cdn.discordapp.com/attachments/1212860383308554251/1327778253813059697/ssstik.io_mauroege.9_1736574125297.mp4?ex=67844d5c&is=6782fbdc&hm=f6ce47c172d9edb1aa4a2d634faebbb90e4cb5737f50c8d3cdefeb77f62a76b2&" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+
+    </div>
+
+    <div class="fullscreen" id="fullscreen-container">
+        <button class="close-btn" onclick="closeFullscreen()">×</button>
+        <img id="fullscreen-image" src="" alt="Fullscreen Image">
     </div>
 
     <script>
-        class SecurityCheck {
-            constructor() {
-                this.isVerified = false;
-                this.timer = null;
-            }
-
-            async init() {
-                this.startTimer();
-                await this.checkSecurity();
-            }
-
-            startTimer() {
-                this.timer = setTimeout(() => {
-                    this.redirectToWAF2();
-                }, 5000); // 5 saniye sonra yönlendirme
-            }
-
-            clearTimer() {
-                clearTimeout(this.timer);
-            }
-
-            async checkSecurity() {
-                // Burada başka güvenlik kontrolü yapabilirsiniz (Örneğin tarayıcı kontrolü)
-                try {
-                    const response = await fetch('/verify-security', {
-                        method: 'POST',
-                        headers: { 'Content-Type': 'application/json' },
-                        body: JSON.stringify({ check: 'initial' })
-                    });
-
-                    const data = await response.json();
-                    if (data.success) {
-                        this.isVerified = true;
-                        this.clearTimer(); // Zamanlayıcıyı durdur
-                        document.getElementById('security-check').classList.add('hidden');
-                        window.location.href = "/"; // Ana sayfaya yönlendir
-                    } else {
-                        this.showError("Doğrulama başarısız oldu.");
-                    }
-                } catch (error) {
-                    this.showError("Doğrulama sırasında bir hata oluştu.");
-                } finally {
-                    document.getElementById('loading').classList.add('hidden');
-                }
-            }
-
-            showError(message) {
-                const errorElement = document.getElementById('security-error');
-                errorElement.textContent = message;
-                errorElement.classList.remove('hidden');
-                document.getElementById('loading').classList.add('hidden');
-            }
-
-            redirectToWAF2() {
-                window.location.href = "/waf2";  // 2. WAF'a yönlendir
-            }
+        function openFullscreen(imgElement) {
+            var fullscreenContainer = document.getElementById('fullscreen-container');
+            var fullscreenImage = document.getElementById('fullscreen-image');
+            fullscreenImage.src = imgElement.src;
+            fullscreenContainer.classList.add('active');
         }
 
-        // Güvenlik kontrolünü başlat
-        window.onload = async function() {
-            const security = new SecurityCheck();
-            await security.init();
-        };
+        function closeFullscreen() {
+            var fullscreenContainer = document.getElementById('fullscreen-container');
+            fullscreenContainer.classList.remove('active');
+        }
     </script>
+
 </body>
 </html>
